added image to search area

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
 /* * {
     border: solid 1px;
 } */
+
+.departures { 
+    background-image: url('../images/departures.jpg'); 
+    /* background-size: contain;  */
+}
