updated clear history btn and styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
     border: solid 1px;
 } */
 /* Class and ID Styling */
-.departures-image { 
+.departures-image {
     background-image: url('../images/departures2.jpg');
     background-size: cover;
 }
@@ -18,5 +18,7 @@
 }
 
 #search-history {
-    margin-top: 10px;
+    margin: 10px;
+    display: flex;
+    flex-direction: row;
 }
