picture classes now correctly update on new search

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@
 }
 
 .miami-image {
-    background-image: url('../images/miami.jpg');
+    background-image: url('../images/Miami.jpg');
     background-size: cover;
 }
 
