--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,3 +76,9 @@ button:hover {
     position: relative;
     top: 2px;
 }
+
+.column {
+    background-color: rgba(56, 20, 136, 0.4);
+    color: white;
+    margin: 20px;
+}
