--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,3 +92,17 @@ button:hover {
     color: white;
     margin: 20px;
 }
+
+#currencyexchange {
+    background-color: rgba(56, 20, 136, 0.4);
+    color: white;
+    text-align: center;
+    font-size: larger;
+    padding: 20px;
+
+
+}
+
+#five-day-heading {
+    margin-left: 10px;
+}
