--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,10 @@ button:hover {
     margin-right: auto;
 }
 
-.forecast-text {
+.currency-display {
     text-align: center;
+    background-color: rgba(56, 20, 136, 0.4);
+    color: white;
 }
 
 .five-day-display {
@@ -87,8 +89,9 @@ button:hover {
     top: 2px;
 }
 
-.column {
+.forecast-display-colour {
     background-color: rgba(56, 20, 136, 0.4);
     color: white;
     margin: 20px;
+    text-align: center;
 }
