--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,10 @@ button:hover {
     background-size: cover;
 }
 
+.header {
+    background-color: rgba(56, 20, 136, 0.6);
+}
+
 .weather-icon {
     display: block;
     margin-left: auto;
