--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ button:hover {
 }
 
 .five-day-display {
-    height: 800px;
+    height: 60vh;
     width: auto;
 }
 
@@ -97,7 +97,7 @@ button:hover {
 .forecast-display-colour {
     background-color: rgba(56, 20, 136, 0.4);
     color: white;
-    margin: 20px;
+    margin: 0.5%;
     text-align: center;
 }
 
@@ -107,4 +107,11 @@ button:hover {
 
 #five-day-heading {
     margin-left: 10px;
+}
+
+@media only screen and (max-width: 768px) {
+    .five-day-display {
+        height: 100vmax;
+        width: auto;
+    }
 }
