--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,7 @@ button:hover {
     color: white;
     margin: 0.5%;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 #five-day-heading {
