added initial background image to english.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,11 @@ button:hover {
     width: auto;
 }
 
+.initial-background-image {
+    background-image: url('../images/runway.jpg');
+    background-size: cover;
+}
+
 .cancun-image {
     background-image: url('../images/beach-photo.jpg');
     background-size: cover;
